Added to integrated research, education, and outreach plan

--- a/latex/description.tex
+++ b/latex/description.tex
@@ -411,6 +411,8 @@ to foster exchange of ideas across the disciplines involved in this project.
 Our interdisciplinary approach requires technical and research
 expertise from several Computer Science (CS) and Electrical Engineering (EE) disciplines, and each PI brings skills essential for the success of this work.
 
+\input{integrated_research.tex}
+
 \subsection{Proposed Outreach and Education Activities}
 
 In addition to research proposed here, this proposed work will help foster interaction among researchers from a
