added prior support

--- a/latex/refs.bib
+++ b/latex/refs.bib
@@ -1355,3 +1355,156 @@ series = {MICRO-50 '17}
   pages={47-55},
   doi={10.1109/2.68}}
 
+@inproceedings{bleier22,
+author = {Bleier, Nathaniel and Lee, Calvin and Rodriguez, Francisco and Sou, Antony and White, Scott and Kumar, Rakesh},
+title = {FlexiCores: Low Footprint, High Yield, Field Reprogrammable Flexible Microprocessors},
+year = {2022},
+isbn = {9781450386104},
+publisher = {Association for Computing Machinery},
+address = {New York, NY, USA},
+url = {https://doi.org/10.1145/3470496.3527410},
+doi = {10.1145/3470496.3527410},
+abstract = {Flexible electronics is a promising approach to target applications whose computational needs are not met by traditional silicon-based electronics due to their conformality, thinness, or cost requirements. A microprocessor is a critical component for many such applications; however, it is unclear whether it is feasible to build flexible processors at scale (i.e., at high yield), since very few flexible microprocessors have been reported and no yield data or data from multiple chips has been reported. Also, prior manufactured flexible systems were not field-reprogrammable and were evaluated either on a simple set of test vectors or a single program. A working flexible microprocessor chip supporting complex or multiple applications has not been demonstrated. Finally, no prior work performs a design space of flexible microprocessors to optimize area, code size, and energy of such microprocessors.In this work, we fabricate and test hundreds of FlexiCores - flexible 0.8 μm IGZO TFT-based field-reprogrammable 4 and 8-bit microprocessor chips optimized for low footprint and yield. We show that these gate count-optimized processors can have high yield (4-bit FlexiCores have 81\% yield - sufficient to enable sub-cent cost if produced at volume). We evaluate these chips over a suite of representative kernels - the kernels take 4.28 ms to 12.9 ms and 21.0 μJ to 61.4 μJ for execution (at 360 nJ per instruction). We also present the first characterization of process variation for a flexible processor - we observe significant process variation (relative standard deviation of 15.3\% and 21.5\% in terms of current draw of 4-bit and 8-bit FlexiCore chips respectively). Finally, we perform a design space exploration and identify design points much better than FlexiCores - the new cores consume only 45--56\% the energy of the base design, and have code size less than 30\% of the base design, with an area overhead of 9--37\%.},
+booktitle = {Proceedings of the 49th Annual International Symposium on Computer Architecture},
+pages = {831–846},
+numpages = {16},
+location = {New York, New York},
+series = {ISCA '22}
+}
+
+@inproceedings{bleier23,
+author = {Bleier, Nathaniel and and Rodriguez, Francisco and Sou, Antony and White, Scott and Kumar, Rakesh},
+title={Exploiting Short Application Lifetimes for Low Cost Hardware Encryption in Flexible Electronics},
+publisher = {Association for Computing Machinery},
+address = {New York, NY, USA},
+booktitle = {Proceedings of the 2023 Conference \& Exhibition on Design, Automation \& Test in Europe},
+location = {Antwerp, Belgium},
+series = {DATE '23}
+}
+
+@INPROCEEDINGS{bleier2020printed,
+    author={Bleier, Nathaniel and Mubarik, Muhammad Husnain and Rasheed, Farhan and Aghassi-Hagmann, Jasmin and Tahoori, Mehdi
+    B and Kumar, Rakesh},
+    booktitle={2020 ACM/IEEE 47th Annual International Symposium on Computer Architecture (ISCA)},
+    title={Printed Microprocessors},
+    year={2020},
+    volume={},
+    number={},
+    pages={213-226},
+    doi={10.1109/ISCA45697.2020.00028}}
+
+@INPROCEEDINGS{mubarik20,
+  author={Mubarik, Muhammad Husnain and Weller, Dennis D. and Bleier, Nathaniel and Tomei, Matthew and Aghassi-Hagmann, Jasmin and Tahoori, Mehdi B. and Kumar, Rakesh},
+  booktitle={2020 53rd Annual IEEE/ACM International Symposium on Microarchitecture (MICRO)},
+  title={Printed Machine Learning Classifiers},
+  year={2020},
+  volume={},
+  number={},
+  pages={73-87},
+  doi={10.1109/MICRO50266.2020.00019}}
+
+@ARTICLE{8502791,
+  author={Elfaramawy, Tamer and Fall, Cheikh Latyr and Arab, Soodeh and Morissette, Martin and Lellouche, François and Gosselin, Benoit},
+  journal={IEEE Sensors Journal},
+  title={A Wireless Respiratory Monitoring System Using a Wearable Patch Sensor Network},
+  year={2019},
+  volume={19},
+  number={2},
+  pages={650-657},
+  doi={10.1109/JSEN.2018.2877617}}
+
+@InProceedings{garments,
+author="Rinaldi, Alessandra
+and Becchimanzi, Claudia
+and Tosi, Francesca",
+editor="Bagnara, Sebastiano
+and Tartaglia, Riccardo
+and Albolino, Sara
+and Alexander, Thomas
+and Fujita, Yushi",
+title="Wearable Devices and Smart Garments for Stress Management",
+booktitle="Proceedings of the 20th Congress of the International Ergonomics Association (IEA 2018)",
+year="2019",
+publisher="Springer International Publishing",
+address="Cham",
+pages="898--907",
+abstract="Wearables are the cutting edge of electronic devices; as they are miniaturized, people can directly wear them, generating a continuous interaction with computers. The implementation of wearables in everyday life is going to change completely human behaviours. These devices create human-computer interaction potentialities that can be addressed to several directions: taking care of people, leading people to a different behaviour model for changing social dynamics, turning these ubiquitous computers into a ``collective wearable''.",
+isbn="978-3-319-96071-5"
+}
+
+@article{gethin2013printed,
+  title={Printed silver circuits for FMCG packaging},
+  author={Gethin, David Tudor and Jewell, Eifion Huw and Claypole, Tim Charles},
+  journal={Circuit World},
+  year={2013},
+  publisher={Emerald Group Publishing Limited}
+}
+
+@article{DERAKHSHANDEH20181259,
+title = {Smart Bandages: The Future of Wound Care},
+journal = {Trends in Biotechnology},
+volume = {36},
+number = {12},
+pages = {1259-1274},
+year = {2018},
+issn = {0167-7799},
+doi = {https://doi.org/10.1016/j.tibtech.2018.07.007},
+url = {https://www.sciencedirect.com/science/article/pii/S0167779918301987},
+author = {Hossein Derakhshandeh and Sara Saheb Kashaf and Fariba Aghabaglou and Ian O. Ghanavati and Ali Tamayol},
+keywords = {wound care, smart bandages, flexible electronics, drug delivery, integrated systems},
+abstract = {Chronic non-healing wounds are major healthcare challenges that affect a noticeable number of people; they exert a severe financial burden and are the leading cause of limb amputation. Although chronic wounds are locked in a persisting inflamed state, they are dynamic and proper therapy requires identifying abnormalities, administering proper drugs and growth factors, and modulating the conditions of the environment. In this review article, we discuss technologies that have been developed to actively monitor the wound environment. We also highlight drug delivery tools that have been integrated with bandages to facilitate precise temporal and spatial control over drug release and review automated or semi-automated systems that can respond to the wound environment.}
+}
+
+@INPROCEEDINGS{7994325,
+  author={Chen, Yu and Fu, Guoqing and Zilberman, Yael and Ruan, Weitong and Ameri, Shideh Kabiri and Miller, Eric and Sonkusale, Sameer},
+  booktitle={2017 19th International Conference on Solid-State Sensors, Actuators and Microsystems (TRANSDUCERS)},
+  title={Disposable colorimetric geometric barcode sensor for food quality monitoring},
+  year={2017},
+  volume={},
+  number={},
+  pages={1422-1424},
+  doi={10.1109/TRANSDUCERS.2017.7994325}}
+
+@article{BERGAMINI200554,
+title = {A disposable electrochemical sensor for the rapid determination of levodopa},
+journal = {Journal of Pharmaceutical and Biomedical Analysis},
+volume = {39},
+number = {1},
+pages = {54-59},
+year = {2005},
+issn = {0731-7085},
+doi = {https://doi.org/10.1016/j.jpba.2005.03.014},
+url = {https://www.sciencedirect.com/science/article/pii/S0731708505002189},
+author = {Márcio F. Bergamini and André L. Santos and Nelson R. Stradiotto and Maria Valnice B. Zanoni},
+keywords = {-Dopa, Screen-printed gold electrode, Amperometric determination, Flow system},
+abstract = {Levodopa (l-dopa), the biological precursor of catecholamines, is the most widely prescribed drug in the treatment of Parkinson's disease. The present work presents a proposal for the application of a gold screen-printed electrode an electrochemical sensor for monitoring l-dopa in stationary solution and a flow system. Using the electrooxidation of l-dopa at +0.63V in acetate buffer pH 3.0 on a gold screen-printed electrode it is possible to obtain a linear calibration curve from 9.9×10−5 to 1.2×10−3molL−1 and a detection limit of 6.8×10−5molL−1. Under amperometric conditions (Eapp=0.8V; flow rate=14.1mLmin−1; pH 3.0), an analytical calibration graph for l-dopa was obtained from 1.0×10−6molL−1 6.6×10−4molL−1 with a detection limit of 9.9×10−7molL−1. The method was successfully applied to the determination of l-dopa in commercial dosage forms without any pre-treatment.}
+}
+
+@Article{chemosensors8040125,
+AUTHOR = {Syrový, Tomáš and Vik, Robert and Pretl, Silvan and Syrová, Lucie and Čengery, Jiří and Hamáček, Aleš and Kubáč, Lubomír and Menšík, Ladislav},
+TITLE = {Fully Printed Disposable IoT Soil Moisture Sensors for Precision Agriculture},
+JOURNAL = {Chemosensors},
+VOLUME = {8},
+YEAR = {2020},
+NUMBER = {4},
+ARTICLE-NUMBER = {125},
+URL = {https://www.mdpi.com/2227-9040/8/4/125},
+ISSN = {2227-9040},
+ABSTRACT = {Digitization of industrial processes using new technologies (IoT&mdash;Internet of Things, IoE&mdash;Internet of Everything), including the agriculture industry, are globally gaining growing interest. The precise management of production inputs is essential for many agricultural companies because limited or expensive sources of water and nutrients could make sustainable production difficult. For these reasons, precise data from fields, plants, and greenhouses have become more important for decision making and for the proper dosage of water and nutrients. On the market are a variety of sensors for monitoring environmental parameters within a precise agricultural area. However, the high price, data storage/transfer functionality are limiting so cost-effective products capable to transfer data directly to farmers via wireless IoT networks are required. Within a given scope, low-price sensor elements with an appropriate level of sensor response are required. In the presented paper, we have developed fully printed sensor elements and a dedicated measuring/communicating unit for IoT monitoring of soil moisture. Various fabrication printing techniques and a variety of materials were used. From the performed study, it is obvious that fully printed sensor elements based on cheap and environmentally friendly carbon layers printed on the wood substrate can compete with conventionally made sensors based on copper.},
+DOI = {10.3390/chemosensors8040125}
+}
+
+@article{MARRAZZA1999297,
+title = {Disposable DNA electrochemical biosensors for environmental monitoring},
+journal = {Analytica Chimica Acta},
+volume = {387},
+number = {3},
+pages = {297-307},
+year = {1999},
+issn = {0003-2670},
+doi = {https://doi.org/10.1016/S0003-2670(99)00051-3},
+url = {https://www.sciencedirect.com/science/article/pii/S0003267099000513},
+author = {Giovanna Marrazza and Iva Chianella and Marco Mascini},
+keywords = {DNA, Hybridization, DNA damage},
+abstract = {Two disposable electrochemical biosensors are described; the first one is useful for the detection of the hybridization of DNA and the second one is able to detect low-molecular weight compounds (toxins, pollutants, drugs) with affinity for nucleic acids. Synthetic single-stranded oligonucleotides have been immobilized onto graphite screen-printed electrodes using adsorption at a controlled potential. The probes were hybridized with different concentrations of the complementary sequences. The hybrids formed on the electrode surface were evaluated by chronopotentiometric stripping analysis using daunomycin hydrochloride as an indicator of the hybridization reaction. The DNA sensor was able to detect 0.2mgl−1 of a 21-base target sequence. The determination of low-molecular weight compounds with affinity for DNA was measured by their effect on the oxidation signal of the guanine peak of calf thymus immobilized on the electrode sensor and investigated by chronopotentiometric analysis. The DNA biosensor is able to detect known intercalating and groove binding compounds. Detection limits of 0.3, 0.2 and 10mgl−1 were obtained for daunomycin, polychlororinated biphenyls (PCBs) and aflatoxin B1, respectively. Applicability to river water samples was demonstrated.}
+}
