--- a/latex/refs.bib
+++ b/latex/refs.bib
@@ -1,3 +1,13 @@
+@INPROCEEDINGS{Nader2020,
+  author={Sehatbakhsh, Nader and Yilmaz, Baki Berkay and Zajic, Alenka and Prvulovic, Milos},
+  booktitle={2020 IEEE International Symposium on High Performance Computer Architecture (HPCA)},
+  title={EMSim: A Microarchitecture-Level Simulation Tool for Modeling Electromagnetic Side-Channel Signals},
+  year={2020},
+  volume={},
+  number={},
+  pages={71-85},
+  doi={10.1109/HPCA47549.2020.00016}}
+
 @book{lamport94,
  author = "Leslie Lamport",
  title = "{\LaTeX: A Document Preparation System}",
@@ -1354,4 +1364,3 @@ series = {MICRO-50 '17}
   number={7},
   pages={47-55},
   doi={10.1109/2.68}}
-
