Integrated more items from Rakesh

--- a/latex/description.tex
+++ b/latex/description.tex
@@ -197,7 +197,7 @@ However, none of them address the need for developing microarchitecture-level an
 
 \input{proposed.tex}
 
-\section{Integrated Research, Education, and Outreach Plan- EDIT}
+\section{Integrated Research, Education, and Outreach Plan}
 The research, education, and outreach milestones for each year are outlined in the following table.
 \begin{small}
 \begin{tabular}{||c|p{0.42\linewidth}|p{0.42\linewidth}||}
@@ -222,18 +222,7 @@ Refine course modules; develop K-12 and public demonstrators for sensory experie
 \end{tabular}
 \end{small}
 
-The PIs plan to conduct the proposed research in a highly integrated manner.
-Three PhD students will work on this project, and we will seek out students
-whose primary expertise is in one of the areas relevant to this project,
-but who are willing to learn and contribute to the other areas. We also
-anticipate that most (or all) of the students will be co-advised. Finally,
-we will hold weekly meetings to both keep the project well-coordinated and
-to foster exchange of ideas across the disciplines involved in this project.
-
-Our interdisciplinary approach requires technical and research
-expertise from several Computer Science (CS) and Electrical Engineering (EE) disciplines, and each PI brings skills essential for the success of this work.
-
-\input{integrated_research.tex}
+The PIs plan to conduct the proposed research in a highly integrated manner, as the project requires technical and research expertise from several Computer Science (CS) and Electrical Engineering (EE) disciplines, and each PI brings skills essential for the success of this work. To keep the project integrated, we will regularly communicate among the tems members, hold bi-weekly project-wide virtual meetings, and meet in person at least once per year (more details are in our Collaboration Plan).
 
 \subsection{Proposed Outreach and Education Activities}
 
@@ -245,20 +234,20 @@ outreach and education activities.
 
 \begin{itemize}\denseitems
 
-\item We will introduce relevant cross-disciplinary material into
-  several courses at the graduate and undergraduate level. For
-  example, we will add to VLSI and computer
-  architecture courses an introduction to physical side-channel (EM)
-  signals. Similarly, in electromagnetics, telecommunications, and
-  signal processing classes, we will add a discussion of how computer
-  hardware and software interact to create side-channel signals. This
-  will help students understand the broader perspectives relevant to
-  each class, and also help them appreciate the increasingly
-  multi-disciplinary nature of science and technology.
+\item We will continue to introduce relevant cross-disciplinary material into several courses at the graduate and undergraduate level.
+For example, we will add to VLSI and computer architecture courses an introduction to physical side-channel signals.
+Similarly, in electromagnetics, telecommunications, and signal processing classes, we will add a discussion of how computer
+hardware and software interact to create side-channel signals. This will help students understand the broader perspectives relevant to
+each class, and also help them appreciate the increasingly multi-disciplinary nature of science and technology.
 
-\item We will continue to include undergraduate students in our
-  research. The PIs Zajic and Prvulovic have long history of advising undergraduate students (26 undergrads) through
-  Opportunity Research Scholar (ORS) program at Georgia Tech and individual motorship and plan to continue that activity.
+\item We will continue to include undergraduate students in our research.
+PIs Zajic and Prvulovic have long history of advising undergraduate students (26 undergrads)
+through Opportunity Research Scholar (ORS) program at Georgia Tech and individual mentorship,
+while PI Kumar has advised several undergraduate researchers who have gone on to join graduate
+studies at UIUC and elsewhere, and has advised undergraduate students who have recently published
+in premiere computer architecture conferences, including ISCA, HPCA (best paper nomination),
+and DAC. The interdisciplinary nature of the project will help us engage a large number of undergraduate
+students in research, and will provide both graduate and undergraduate student with a unique interdiciplinary skill-set.
 
 \item Another outreach activity will be the development of displays
   and tools for educating the general public, especially high-school
@@ -267,6 +256,10 @@ outreach and education activities.
   high schools in the greater metro Atlanta area~\cite{Conrad2022}.
   The PIs Zajic and Prvulovic have done this in the past with hands-on demonstration for the Family Science Night at the Mimosa
   Elementary School in Roswell, GA and hands-on STEM activities at Pace Academy in Atlanta, GA.
+  Similarly, Dr. Kumar has assisted in the organization of events such as HackIllinois and Engineering Open House (EOH)
+  that see enthusiastic participation from the local community. He will have a booth on “processors that leak information” in the
+  next three EOHs to get high school students excited about intersection of computer architecture and security.
+
 \end{itemize}
 
 
@@ -294,7 +287,16 @@ to educate public about this new technology. We have received several best paper
 
 {\bf Dr. Zajic} is currently also the PI on grant ECCS-1651273 NSF CAREER(from 2017-2023 $\$500K$) \textit{Modeling and Measurements for THz Wireless Chip-to-Chip Communications Propagation} \textit{Intellectual Merit:}To enable future THz wireless communication between chips in a system and between blades and racks in large-scale data center systems, this project is investigating  propagation mechanisms \cite{Cheng2020}, \cite{Kim2016}, \cite{Fu2019} and develops channel models \cite{Kim2016a}, \cite{Fu2020} to enable communication between chips on a motherboard inside a computer system, between the motherboard and an add-on card (e.g., a graphics card), between boards/blades in a rack-mounted system typical for base stations, and between racks in a data center environment (with raised floors, rows of racks, cooling ducts, etc.). \textit{Broader Impact:} In addition to the broader impact within the research community and training graduate students funded by this grant, the PI is leading mm-wave indoor channel modeling and measurements efforts in the 5G Millimeter Wave Channel Model Alliance, led by National institute of Standards and Technology, which aims to produce more accurate, consistent and predictive channel models for frequencies above 6 GHz and lead the standardization process \cite{Book}.
 
-\input{prior_support.tex}
+Dr. Kumar has served as PI on the following NSF-funded project in
+the last five years: CCF-2006763 SHF (from 2020-2023 \$500K).
+
+CCF-2006763 SHF Printed Computer Systems (\$500K, October 2020- September 2023).
+\textit{Intellectual Merit:} The project has already resulted in first sub-cent microprocessor~cite{bleier22}, first plastic encryption engines~\cite{bleier23},
+first work on printed microprocessors~\cite{bleier2020printed}, and first work on printed classifiers~\cite{mubarik20}.
+\textit{Broader Impact:} This project has opened up new possibilities for ultra-low cost and conformal active electronics, enabling applications such as wearable patches~\cite{8502791},
+garments~\cite{garments}, packaging~\cite{gethin2013printed} for fast moving consumer goods (FMCG), low-end healthcare products such as smart
+bandages~\cite{DERAKHSHANDEH20181259}, and disposable sensors for food~\cite{7994325}, pharmaceuticals~\cite{BERGAMINI200554},
+agriculture and forestry~\cite{chemosensors8040125}, and environment~\cite{MARRAZZA1999297} --- that have not seen much penetration of computing.
 
 \bibliographystyle{abbrv}
 \bibliography{refs}
